figue/tests/integration/snapshots/main__integration__err__error_bool_with_invalid_value_positional.snap
---
source: crates/figue/tests/integration/err.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

enable.. true.. --enable

Run with --help for usage information.
Error: unexpected argument: maybe
   ╭─[ <cli>:1:10 ]
   │
 1 │ --enable maybe
   │          ──┬──  
   │            ╰──── unexpected argument: maybe
───╯
